tests/FSharp.Compiler.ComponentTests/Conformance/BasicGrammarElements/TypeAbbreviations/E_AbbreviatedTypeDoesNotExist01.fsx
// #Regression #Conformance #TypesAndModules 
// Type abbreviation
// Type tp abbreviate a type that does not exist

#light

type Z = X.Y.Z.W          // error
